# portal-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  LICENSE  Makefile.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
crates/application/: Cargo.toml
crates/application/src/: announcement_service.rs  bootstrap.rs  chat_service.rs  commands.rs  error.rs  events.rs  group_service.rs  lib.rs  notification_service.rs  permissions.rs  project_service.rs  repair.rs  request_service.rs  resilience.rs  service.rs  ticket_service.rs  user_service.rs
crates/application/src/commands/: chat.rs  daily_report.rs  day_off.rs  flex_hours.rs  group.rs  leave_balance.rs  overtime.rs  policy.rs  project.rs  request.rs  ticket.rs  user.rs
crates/application/src/resilience/: backoff.rs  circuit.rs  dispatch_queue.rs  drainer.rs  health_registry.rs  optimistic.rs  retry.rs  supervisor.rs
crates/application/src/service/: announcement.rs  audit.rs  chat.rs  comment.rs  daily_report.rs  day_off.rs  ext_read.rs  flex_hours.rs  group.rs  holiday.rs  leave_balance.rs  maintenance.rs  notification.rs  overtime.rs  policy.rs  project.rs  read_plane.rs  report.rs  request.rs  service_account.rs  ticket.rs  user.rs
crates/application/src/service/audit/: projector.rs
crates/application/src/service/chat/: ingest.rs
crates/application/src/service/notification/: email.rs  fanout.rs
crates/application/tests/: authz.rs  repair.rs
crates/application/tests/support/: mod.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: api.rs  app.rs  features.rs  main.rs  primitives.rs  state.rs  theme.rs  util.rs
crates/frontend/src/api/: client.rs  display.rs  error.rs  ws.rs
crates/frontend/src/features/: chat.rs  comments.rs  home.rs  policy.rs  projects.rs  reports.rs  requests.rs  ui.rs  users.rs
crates/frontend/src/features/announcements/: api.rs  components.rs  routes.rs
crates/frontend/src/features/audit/: api.rs  components.rs  routes.rs
crates/frontend/src/features/auth/: api.rs  components.rs  routes.rs
crates/frontend/src/features/chat/: api.rs  channel_list.rs  components.rs  composer.rs  message_thread.rs  routes.rs  ws.rs
crates/frontend/src/features/daily_reports/: api.rs  components.rs  routes.rs
crates/frontend/src/features/day_off/: api.rs  components.rs  (+1 more)
crates/frontend/src/primitives/: avatar.rs  avatar_stack.rs  badge.rs  box_.rs  button.rs  card.rs  center.rs  chart.rs  checkbox.rs  cluster.rs  confirm.rs  dialog.rs  dots.rs  dropdown.rs  empty_state.rs  error.rs  grid.rs  icon.rs  input.rs  pagination.rs  segmented.rs  select.rs  sidebar.rs  stack.rs  switch.rs  switcher.rs  table.rs  tabs.rs  textarea.rs  toast.rs  tooltip.rs
crates/frontend/src/state/: auth.rs  chat.rs  notifications.rs  theme.rs  title.rs  toast.rs
crates/frontend/src/theme/: color.rs  effect.rs  radius.rs  space.rs  typography.rs
crates/frontend/src/util/: date.rs  debounce.rs  format.rs  load.rs
crates/frontend/tests/: validation_wasm.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: cassandra.rs  grpc_jobs.rs  health.rs  jobs.rs  lib.rs  local_storage.rs  mailer.rs  openfga.rs  postgres.rs  redis.rs  report.rs  scylla.rs  signed_url.rs  telemetry.rs
crates/infrastructure/src/cassandra/: chat_repo.rs  mappers.rs
crates/infrastructure/src/openfga/: bootstrap.rs  client.rs
crates/infrastructure/src/postgres/: audit_repo.rs  enums.rs  group_repo.rs  mappers.rs  notification_repo.rs  outbox.rs  pool.rs  project_repo.rs  repository.rs  request_repo.rs  ticket_repo.rs  user_repo.rs
crates/infrastructure/src/redis/: connect.rs  presence.rs  pubsub.rs  rate_limit.rs  spool.rs  token_revocation.rs
crates/infrastructure/src/report/: print_pdf.rs
crates/infrastructure/src/scylla/: mappers.rs  repository.rs  session.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: auth.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  config.rs  dto.rs  error.rs  extractors.rs  grpc.rs  lib.rs  main.rs  middleware.rs  realtime.rs  resolve.rs  routes.rs
crates/server/src/dto/: audit.rs  chat.rs  comment.rs  daily_report.rs  day_off.rs  ext.rs  flex_hours.rs  group.rs  holiday.rs  leave_balance.rs  notification.rs  overtime.rs  policy.rs  project.rs  report.rs  request.rs  service_account.rs  ticket.rs  user.rs
crates/server/src/extractors/: app_json.rs  auth_user.rs  validated_json.rs
crates/server/src/grpc/: query.rs
crates/server/src/middleware/: auth.rs  ip_allowlist.rs  rate_limit.rs  request_id.rs  service_account.rs  trace.rs
crates/server/src/routes/: announcements.rs  audit.rs  auth.rs  chat.rs  chat_ws.rs  comments.rs  daily_reports.rs  day_off.rs  ext.rs  files.rs  flex_hours.rs  groups.rs  holidays.rs  leave_balance.rs  notifications.rs  overtime.rs  policy.rs  projects.rs  reports.rs  requests.rs  service_accounts.rs  tickets.rs  users.rs
crates/server/tests/: chat_throughput.rs  common.rs  http.rs
crates/shared/: Cargo.toml
crates/shared/src/: dto.rs  errors.rs  lib.rs  validation.rs
crates/shared/src/dto/: announcement.rs  audit.rs  chat.rs  comment.rs  common.rs  daily_report.rs  day_off.rs  ext.rs  flex_hours.rs  group.rs  health.rs  holiday.rs  ids.rs  leave_balance.rs  notification.rs  overtime.rs  policy.rs  project.rs  report.rs  request.rs  service_account.rs  ticket.rs  user.rs  ws.rs
crates/shared/src/validation/: announcement.rs  chat.rs  comment.rs  common.rs  daily_report.rs  day_off.rs  file.rs  flex_hours.rs  group.rs  holiday.rs  leave_balance.rs  notification.rs  overtime.rs  policy.rs  project.rs  request.rs  service_account.rs  ticket.rs  user.rs
crates/workers/: Cargo.toml
crates/workers/src/: audit.rs  bootstrap.rs  cleanup.rs  config.rs  emails.rs  flex_reconciliation.rs  grpc.rs  job_error.rs  job_spool.rs  leave_expiry.rs  main.rs  notifications.rs  outbox.rs  repair.rs  report_schedule.rs  telemetry.rs  ticket_autoclose.rs  uploads.rs
e2e/: Cargo.toml  README.md
e2e/tests/: smoke.rs
(+418 files in other folders)
