[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# backend
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
hmac = "0.13"
sha2 = "0.11"
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.12", features = ["cookie"] }
# The rust_crypto backend is all-or-nothing (the provider module is gated on
# the meta-feature), so the unused rsa/ecdsa/eddsa algorithms ride along with
# the HS256 we actually use. The rsa advisory RUSTSEC-2023-0071 is unexploitable
# here because we only sign/verify HS256, never RSA.
jsonwebtoken = { version = "10", default-features = false, features = ["hmac", "rust_crypto"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "cors", "limit", "set-header", "catch-panic"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "macros", "migrate"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
scylla = { version = "1", features = ["time-03", "rustls-023"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
futures = "0.3"
dotenvy = "0.15"

# workers
apalis = "0.7"
apalis-redis = "0.7"
# tokio1-rustls-tls selects the rustls backend; never native-tls/openssl.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "hostname", "pool", "tokio1", "tokio1-rustls-tls"] }
# PDF report rendering. default-features=false drops the heavy html/azul layout
# stack; we only use the low-level Op API with built-in fonts.
printpdf = { version = "0.9", default-features = false }

# frontend
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_animate = "0.1"
stylist = "0.15"
gloo = "0.12"
reqwasm = "0.5"
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
