[package]
name = "application"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }

serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
