[package]
name = "application"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
arc-swap = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
sha2 = { workspace = true }
