[package]
name = "infrastructure"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

sqlx = { workspace = true }
redis = { workspace = true }
scylla = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
lettre = { workspace = true }
printpdf = { workspace = true }
