[package]
name = "proto"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
