[package]
name = "server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
# Disambiguates `cargo run -p server`: the package has a second bin (seed_authz).
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
jsonwebtoken = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
dotenvy = { workspace = true }

[features]
# Gates the live-infra integration tests (Scylla/Redis/Postgres). Off by default
# so `cargo test` and CI stay infra-free.
integration = []

[dev-dependencies]
# `util` brings `ServiceExt::oneshot`, used to drive the router in integration tests.
tower = { workspace = true, features = ["util"] }
# Test fakes implement the `#[async_trait]` domain ports/repositories.
async-trait = { workspace = true }
# Raw pub/sub subscriber for the chat throughput integration test (asserts fan-out).
redis = { workspace = true }
